# ads

./: db.sqlite3  manage.py  pyproject.toml
ads/: admin.py  ads.json  categories.json  models.py  permissions.py  serialaizers.py  settings.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_author_alter_ad_category.py  0003_selection.py  0004_selection_items.py
tests/: conftest.py  factories.py
tests/ads/: ads_create_test.py  ads_detail_test.py  ads_list_test.py
tests/selection/: selection_create_test.py
users/: models.py  serialaizers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py
